<resources>
    <string name="app_name">Arcturus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="home">Home</string>
    <string name="cart">My Cart</string>
    <string name="carts">Former Carts</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>

    <!-- Account Creation -->
    <string name="ca_title">Create your Account</string>
    <string name="ca_name">Name</string>
    <string name="ca_first">First Name</string>
    <string name="ca_mail1">Your Email</string>
    <string name="ca_mail2">Confirm your Email</string>
    <string name="ca_pass1">Enter Password</string>
    <string name="ca_pass2">Confirm your Password</string>
    <string name="ca_validate">Create</string>
    <string name="ca_cancel">Cancel</string>

    <!-- Log -->
    <string name="log_mail">Email</string>
    <string name="log_pass">Password</string>
    <string name="log_create">Got no account ? Create !</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_products_map">Map</string>
    <string name="title_activity_maps">Map</string>

</resources>
