<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/home"
            android:title="@string/home" />
        <item
            android:id="@+id/mycart"
            android:title="@string/cart"/>
        <item
            android:id="@+id/carts"
            android:title="@string/carts"/>
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/about"
            android:title="@string/about"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"/>
    </group>

</menu>
